--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,13 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <div id="wrapper">
-        <div id="container" class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h2>Hi</h2>
-                </div>
-            </div>
-        </div>
-    </div>
+{% block main %}
+    <h2>Hi</h2>
 {% endblock %}
