--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,31 +2,37 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}SchoolBook!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}SchoolBook{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body id="{% block body_id %}{% endblock %}">
-    <div id="navbar">
-        {% include 'common/navbar.html.twig' %}
-    </div>
-        {% block body %}
-            <div class="container body-container" id="main">
-                <div class="row">
-                    <div id="content" class="col-sm-9">
-                        {% block main %}{% endblock %}
+        <div id="main-wrapper">
+            {% include 'common/navbar.html.twig' %}
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% block body %}
+                <div class="container body-container" id="main">
+                    <div class="row">
+                        <div id="content" class="col-12">
+                            {% block main %}{% endblock %}
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endblock %}
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    <div id="footer">
-        {% include 'common/footer.html.twig' %}
-    </div>
+            {% endblock %}
+            {% block javascripts %}
+                {{ encore_entry_script_tags('app') }}
+            {% endblock %}
+            {% include 'common/footer.html.twig' %}
+        </div>
     </body>
 </html>
 
