--- a/app/Resources/views/common/navbar.html.twig
+++ b/app/Resources/views/common/navbar.html.twig
@@ -1,3 +1,41 @@
-{% block header %}
-    <h2>header</h2>
+{% block navbar %}
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="/"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarsExample03">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'homepage' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('homepage') }}">Home</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if app.user %}
+                    <li class="nav-item mr-5">
+                    <span class="nav-link active cursor-d font-italic">
+                        Welcome {{ app.user.firstName }} {{ app.user.lastName }} !
+                    </span>
+                    </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    {# TODO #}
+                    {% endif %}
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_profile' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('user_profile') }}">My Profile</a>
+                </li>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'security_logout' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('security_logout') }}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'security_login' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('security_login') }}">Login</a>
+                </li>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_register' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('user_register') }}">Register</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
 {% endblock %}
