--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -3,25 +3,38 @@
 {% block main %}
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            {{ form_start(form, {'method': 'POST', 'action': path('security_login') }) }}
-            {{ form_end(form)}}
+            <form class="p-3" name="authenticate" method="post" action="{{ path('security_login') }}">
+                <div class="p-3" id="authenticate">
+                    <div class="form-group">
+                        <label for="authenticate_email" class="required">Email</label>
+                        <input type="text"
+                               id="authenticate_email"
+                               name="_username"
+                               required="required"
+                               class="form-control"
+                               value="{{ last_username }}"
+                        >
+                    </div>
+                    <div class="form-group">
+                        <label for="authenticate_password" class="required">Password</label>
+                        <input type="password"
+                               id="authenticate_password"
+                               name="_password"
+                               required="required"
+                               class="form-control">
+                    </div>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    {% if error %}
+                        <div class="invalid-feedback d-block mb-3">
+                            <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
+                            <span class="form-error-message">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
+                        </div>
+                    {% endif %}
+                    <div class="form-group">
+                        <button type="submit" id="authenticate_submit" class="btn-primary btn">Login</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
-
-
-{# block body %}
-
-
-    <form name="authenticate" action="{{ path('security_login') }}" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="_username" placeholder="Email" value="{{ last_username }}">
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password" name="_password">
-
-
-
-        <button type="submit" >Login</button>
-    </form>
-{% endblock #}
