--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -4,15 +4,10 @@
 {% block main %}
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
-            {{ form(form, {'method': 'POST', 'action': path('user_register') }) }}
+            {{ form(form, {'method': 'POST', 'action': path('user_register'), 'attr' : { 'class': 'p-3' } }) }}
         </div>
     </div>
 {% endblock %}
-
-
-
-
-
 {#<form action="" method="post">
     <div class="form-group">
         <label for="email" class="form-control-label">Email address</label>
