--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,24 @@
 @import "~bootstrap/scss/bootstrap";
 @import "footer";
 @import "navbar";
+
+@import "_helpers/helpers";
+
+
+html,
+body {
+  margin:0;
+  padding:0;
+  height:100%;
+}
+
+#main-wrapper {
+  min-height: 100%;
+  position: relative;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #d3d3d3;
+}
