--- a/app/Resources/views/common/navbar.html.twig
+++ b/app/Resources/views/common/navbar.html.twig
@@ -1,39 +1,60 @@
 {% block navbar %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="/"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03"
+                aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample03">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'homepage' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('homepage') }}">Home</a>
+                <li class="nav-item {% if app.user %}
+                                        {% if ((is_granted('ROLE_ADMIN')) and (app.request.attributes.get('_route') == 'admin_home')) or
+                                            ((is_granted('ROLE_TEACHER')) and (app.request.attributes.get('_route')) == 'teacher_home') or
+                                            ((is_granted('ROLE_USER')) and (app.request.attributes.get('_route') == 'student_home')) %}active
+                                        {% endif %}
+                                    {% endif %}">
+                    <a class="nav-link" href="{% if app.user %}
+                                                {% if (is_granted('ROLE_ADMIN')) %}
+                                                    {{ path('admin_home') }}
+                                                    {% elseif (is_granted('ROLE_TEACHER')) %}
+                                                    {{ path('teacher_home') }}
+                                                    {% elseif (is_granted('ROLE_USER')) %}
+                                                    {{ path('student_home') }}
+                                                    {% else %}
+                                                    {{ path('homepage') }}
+                                                {% endif %}
+                                            {% endif %}"
+                    >Home</a>
                 </li>
             </ul>
+            {{ path('homepage') }}
             <ul class="navbar-nav ml-auto">
                 {% if app.user %}
-                    <li class="nav-item mr-5">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        {# TODO #}
+                    {% endif %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'student_schedule' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('student_schedule') }}">Weekly Schedule</a>
+                    </li>
+                    <li class="mr-5 nav-item {% if app.request.attributes.get('_route') == 'user_profile' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('user_profile') }}">My Profile</a>
+                    </li>
+                    <li class="nav-item ml-md-5">
                     <span class="nav-link active cursor-d font-italic">
                         Welcome {{ app.user.firstName }} {{ app.user.lastName }} !
                     </span>
                     </li>
-                    {% if is_granted('ROLE_ADMIN') %}
-                    {# TODO #}
-                    {% endif %}
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_profile' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('user_profile') }}">My Profile</a>
-                </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'security_logout' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('security_logout') }}">Logout</a>
-                </li>
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'security_logout' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('security_logout') }}">Logout</a>
+                    </li>
                 {% else %}
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'security_login' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('security_login') }}">Login</a>
-                </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_register' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('user_register') }}">Register</a>
-                </li>
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'security_login' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('security_login') }}">Login</a>
+                    </li>
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'user_register' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('user_register') }}">Register</a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
