--- a/app/Resources/views/teacher/index.html.twig
+++ b/app/Resources/views/teacher/index.html.twig
@@ -1,4 +1,53 @@
 {% extends 'base.html.twig' %}
 {% block main %}
-    <h2>hi</h2>
+    {% if emptyClasses is defined and emptyClasses|length > 0 %}
+            <h2 class="text-center m-5">Please select a class from the list: </h2>
+            {% for emptyClass in emptyClasses %}
+            <div class="row">
+                <div class="col-6 offset-3 mt-2 mb-2">
+                    <span class="font-weight-bold">Grade:</span> {{ emptyClass.name }}
+                    <a href="/teacher/subscribe/{{ emptyClass.id }}" class="float-right btn-primary btn">Select</a>
+                </div>
+            </div>
+            {% endfor %}
+        {% else %}
+            <h2 class="text-center m-5">Welcome!</h2>
+            <h3 class="text-center m-2">Your class is <span>{{ students[0].grade }}</span> grade.</h3>
+            <h3 class="text-center m-2">Students: </h3>
+
+                <div class="row">
+                    <div class="col-10 offset-1 mt-5 mb-5">
+                        <div class="row">
+                            <div class="col-4">
+                                <h4 class="text-center">First name</h4>
+                            </div>
+                            <div class="col-4">
+                                <h4 class="text-center">Last name</h4>
+                            </div>
+                            <div class="col-4">
+                                <h4 class="text-center">Actions</h4>
+                            </div>
+                        </div>
+                        {% for student in students %}
+                            <div class="row">
+                                <div class="col-4">
+                                    <h5>
+                                        {{ student.firstName }}
+                                    </h5>
+                                </div>
+                                <div class="col-4">
+                                    <h5>
+                                        {{ student.lastName }}
+                                    </h5>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <a href="" class="btn-success btn">Details</a>
+                                    <a href="" class="btn-danger btn">Remove</a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+
+    {% endif %}
 {% endblock %}
