--- a/app/Resources/views/teacher/details.html.twig
+++ b/app/Resources/views/teacher/details.html.twig
@@ -25,7 +25,12 @@
         </div>
     </div>
     <div class="row mt-5">
-        <div class="col-12 mt-5">
+        <div class="col-12 text-center mt-1 mb-5">
+            <button class="btn-primary btn btn-show-grades">Show Grades <span class="ml-2"> <i class="fas fa-arrow-right animation"></i></span></button>
+        </div>
+    </div>
+    <div class="row grades d-none">
+        <div class="col-12">
             <div class="row">
                 <div class="col-3">Course*</div>
                 <div class="col-3">Grade*</div>
