--- a/assets/css/_helpers/_variables.scss
+++ b/assets/css/_helpers/_variables.scss
@@ -7,3 +7,14 @@ $padding: 10px;
 $primaryBtnColor: $baseColor;
 $successBtnColor: #28a745;
 $dangerBtnColor: #dc3545;
+
+$headings-font-family: 'Roboto Condensed', sans-serif;
+$headings-font-weight: 700;
+
+$font-family-base: 'Open Sans', sans-serif;
+
+$h1-font-size: 4rem;
+$h2-font-size: 3.5rem;
+$h3-font-size: 3rem;
+$h4-font-size: 2.5rem;
+$h5-font-size: 2rem;
