--- a/app/Resources/views/common/navbar.html.twig
+++ b/app/Resources/views/common/navbar.html.twig
@@ -40,6 +40,20 @@
                             >Grades Book</a>
                         </li>
                     {% endif %}
+                    {% if app.user and is_granted('ROLE_USER') and not is_granted('ROLE_TEACHER') and not is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item {% if app.request.attributes.get('_route') == 'student_absences'%}active{% endif %}">
+                            <a class="nav-link"
+                               href="{{ path('student_absences') }}"
+                            >Absences</a>
+                        </li>
+                    {% endif %}
+                    {% if is_granted('ROLE_TEACHER') %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'teacher_students_list' %}active{% endif %}">
+                        <a class="nav-link"
+                           href="{{ path('teacher_students_list') }}"
+                        >My Class</a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item {% if app.request.attributes.get('_route') == 'student_schedule' or app.request.attributes.get('_route') == 'teacher_schedule' %}active{% endif %}">
                         <a class="nav-link"
                             href="
