--- a/app/Resources/views/student/schedule.html.twig
+++ b/app/Resources/views/student/schedule.html.twig
@@ -3,108 +3,50 @@
     <div class="row">
         <div class="col-12 schedule-table mt-5">
             <div class="row">
+                <div class="custom-table-temlate">
                 {% if days is defined and days|length > 0 %}
-                {% for day in days %}
-                    <div class="{{ day.day == 'Monday' ? 'offset-lg-1 ' : '' }}col-8 offset-2 col-lg-2 offset-lg-0 table-cell">
-                        <div class="col-12 text-center table-head-day font-weight-bolder">{{ day.day }}</div>
-                        <div class="row table-row first-row">
-                            <div class="col-2 table-index">1</div>
-                            <div class="col-9 table-value">{{ day.first }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">2</div>
-                            <div class="col-9 table-value">{{ day.second }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">3</div>
-                            <div class="col-9 table-value">{{ day.third }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">4</div>
-                            <div class="col-9 table-value">{{ day.fourth }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">5</div>
-                            <div class="col-9 table-value">{{ day.fifth }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">6</div>
-                            <div class="col-9 table-value">{{ day.sixth }}</div>
-                        </div>
-                        <div class="row table-row">
-                            <div class="col-2 table-index">7</div>
-                            <div class="col-9 table-value">{{ day.seventh }}</div>
-                        </div>
-                    </div>
-                {% endfor %}
+                        <div class="header">Weekly Schedule</div>
+                        <table cellspacing="0">
+                            <tr>
+                                {% for day in days %}
+                                    <th class="{{ day.day == "now"|date('l') ? 'active-day' : '' }}">{{ day.day }}</th>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                {% for day in days %}
+                                    <td class="single-day {{ day.day }}" id="{{ day.id }}">
+                                        <table cellspacing="0">
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">1. {{ day.first }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">2. {{ day.second }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">3. {{ day.third }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">4. {{ day.fourth }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">5. {{ day.fifth }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">6. {{ day.sixth }}</td>
+                                            </tr>
+                                            <tr class="single-subject-row">
+                                                <td class="single-subject">7. {{ day.seventh }}</td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                {% endfor %}
+                            </tr>
+                        </table>
                 {% else %}
-                    <div class="col-12 text-center">
-                        <h3 class="text-center">You are not registered yet.</h3>
-                    </div>
+                    <div class="header">You are not registered yet.</div>
                 {% endif %}
+                </div>
             </div>
         </div>
     </div>
 {% endblock %}
-
-
-{#
-<div class="row">
-            <div class="offset-1 col-2">
-                <div class="col-12">Monday</div>
-                <div class="col-12">1</div>
-                <div class="col-12">2</div>
-                <div class="col-12">3</div>
-                <div class="col-12">4</div>
-                <div class="col-12">5</div>
-            </div>
-            <div class="col-2">
-                <div class="col-12">Monday</div>
-                <div class="col-12">1</div>
-                <div class="col-12">2</div>
-                <div class="col-12">3</div>
-                <div class="col-12">4</div>
-                <div class="col-12">5</div>
-            </div>
-            <div class="col-2">
-                <div class="col-12">Monday</div>
-                <div class="col-12">1</div>
-                <div class="col-12">2</div>
-                <div class="col-12">3</div>
-                <div class="col-12">4</div>
-                <div class="col-12">5</div>
-            </div>
-            <div class="col-2">
-                <div class="col-12">Monday</div>
-                <div class="col-12">1</div>
-                <div class="col-12">2</div>
-                <div class="col-12">3</div>
-                <div class="col-12">4</div>
-                <div class="col-12">5</div>
-            </div>
-            <div class="col-2">
-                <div class="col-12">Monday</div>
-                <div class="col-12">1</div>
-                <div class="col-12">2</div>
-                <div class="col-12">3</div>
-                <div class="col-12">4</div>
-                <div class="col-12">5</div>
-            </div>
-        </div>
-
-
-                    {#{% for key,value in schedule %}#}
-                {#<div class="{{ key == 'Monday' ? 'offset-1 ' : '' }}col-2">#}
-                    {#<div class="col-12">{{ key }}</div>#}
-                    {#{% for index, subject in value %}#}
-                        {#<div class="row">#}
-                            {#<div class="col-2">#}
-                                {#{{ index }}#}
-                            {#</div>#}
-                            {#<div class="col-10">#}
-                                {#{{ subject }}#}
-                            {#</div>#}
-                        {#</div>#}
-                    {#{% endfor %}#}
-                {#</div>#}
-            {#{% endfor %}#}
