--- a/app/Resources/views/teacher/index.html.twig
+++ b/app/Resources/views/teacher/index.html.twig
@@ -14,74 +14,64 @@
         {% endfor %}
     {% else %}
         <h2 class="text-center m-5">Welcome!</h2>
-        <h3 class="text-center m-2">You currently teaching: <span>{{ teacherClass.name }}</span> grade</h3>
         {% if unsubscribedStudents is defined and unsubscribedStudents|length > 0 %}
-            <h3 class="text-center m-2 mt-5">Unregistered Students: </h3>
-            <div class="row">
-                <div class="col-10 offset-1 mt-5 mb-5">
-                    <div class="custom-table-temlate">
-                        <div class="header">Registered Students</div>
-                        <table cellspacing="0">
-                            <tr>
-                                <th>Picture</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Personal ID</th>
-                                <th>Actions</th>
-                            </tr>
-                            {% for student in unsubscribedStudents %}
-                                <tr>
-                                    <td><img src="{{ asset('uploads/images/' ~ student.image) }}" alt=""></td>
-                                    <td>{{ student.firstName }}</td>
-                                    <td>{{ student.lastName }}</td>
-                                    <td>{{ student.email }}</td>
-                                    <td>{{ student.personalId }}</td>
-                                    <td class="text-center">
-                                        <a href="{{ path('teacher_register_student', {'id': student.id}) }}"
-                                           class="btn-success btn">Register</a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
+            <h3 class="text-center m-2 mt-5">
+                You have ({{ unsubscribedStudents|length }}) unregistered students.
+            </h3>
+            <p class="unregistered-students text-center">
+                <a href="{{ path('teacher_students_list') }}">Please click here to register them. <i class="register-icon fas fa-angle-double-right"></i></a>
+            </p>
+        {% endif %}
+        <div class="col-10 offset-1 col-md-8 offset-md-2 mt-5">
+            <div class="row mt-5">
+                <div class="col-6 text-center">
+                    <div class="grade-wrapper">
+                        <p class="grade-text">
+                            School Average Grade:
+                        </p>
+                        <div class="number-wrapper">
+                            <i class="icon fas fa-award"></i>
+                            <span>{{ (allGradesAverage)|number_format(2) }}</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 text-center">
+                    <div class="grade-wrapper {{ myClassAllAverageGrades < allGradesAverage ? 'lower-grade' : 'higher-grade' }}">
+                        <p class="grade-text">
+                            My Class Average Grade:
+                        </p>
+                        <div class="number-wrapper">
+                            <i class="icon fas fa-level-{{ myClassAllAverageGrades < allGradesAverage ? 'down' : 'up' }}-alt"></i>
+                            <span>{{ (myClassAllAverageGrades)|number_format(2) }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        {% endif %}
-        {% if students is defined and students|length > 0 %}
-            <div class="row">
-                <div class="col-10 offset-1 mt-5 mb-5">
-                    <div class="custom-table-temlate">
-                        <div class="header">Registered Students</div>
-                        <table cellspacing="0">
-                            <tr>
-                                <th>Picture</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Personal ID</th>
-                                <th>Actions</th>
-                            </tr>
-                            {% for student in students %}
-                                <tr>
-                                    <td><img src="{{ asset('uploads/images/' ~ student.image) }}" alt=""></td>
-                                    <td>{{ student.firstName }}</td>
-                                    <td>{{ student.lastName }}</td>
-                                    <td>{{ student.email }}</td>
-                                    <td>{{ student.personalId }}</td>
-                                    <td class="text-center">
-                                        <a href="{{ path('teacher_details', {'id': student.id}) }}"
-                                           class="btn-success btn">Details</a>
-                                        <a href="{{ path('teacher_remove_student', {'id': student.id}) }}"
-                                           class="btn-danger btn">Remove</a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
+            <div class="row mt-5">
+                <div class="col-6 text-center">
+                    <div class="absence-wrapper">
+                        <p class="grade-text">
+                            School Median Absences:
+                        </p>
+                        <div class="number-wrapper single-number">
+                            <i class="icon far fa-times-circle"></i>
+                            <span>{{ allAbsencesMedian|number_format }}</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 text-center">
+                    <div class="absence-wrapper {{ myClassMedianAbsences > allAbsencesMedian ? 'lower-grade' : 'higher-grade' }}">
+                        <p class="grade-text">
+                            My Class Median Absences:
+                        </p>
+                        <div class="number-wrapper single-number">
+                            <i class="icon fas fa-level-{{ myClassMedianAbsences < allAbsencesMedian ? 'down' : 'up' }}-alt"></i>
+                            <span>{{ myClassMedianAbsences|number_format }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        {% endif %}
+        </div>
     {% endif %}
 {% endblock %}
 
