--- a/app/Resources/views/student/index.html.twig
+++ b/app/Resources/views/student/index.html.twig
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="col-6 text-center">
-                    <div class="absence-wrapper {{ myAbsences > medianAbsences ? 'lower-grade' : 'higher-grade' }}">
+                    <div class="absence-wrapper {{ myAbsences >= medianAbsences ? 'lower-grade' : 'higher-grade' }}">
                         <p class="grade-text">
                             My Absences:
                         </p>
