--- a/app/Resources/views/teacher/index.html.twig
+++ b/app/Resources/views/teacher/index.html.twig
@@ -19,7 +19,7 @@
                 You have ({{ unsubscribedStudents|length }}) unregistered students.
             </h3>
             <p class="unregistered-students text-center">
-                <a href="{{ path('teacher_students_list') }}">Please click here to register them. <i class="register-icon fas fa-angle-double-right"></i></a>
+                <a href="{{ path('teacher_students_list') }}">Please click here to register them <i class="register-icon fas fa-angle-double-right"></i></a>
             </p>
         {% endif %}
         <div class="col-10 offset-1 col-md-8 offset-md-2 mt-5">
