--- a/app/Resources/views/teacher/details.html.twig
+++ b/app/Resources/views/teacher/details.html.twig
@@ -3,6 +3,7 @@
     <div class="row mt-5">
         <div class="col-12">
             <div class="custom-table-temlate">
+                <div class="header">Student</div>
                 <table cellspacing="0">
                     <tr>
                         <th>Picture</th>
@@ -24,9 +25,13 @@
                             <button class="btn-block btn-primary btn" id="btn-show-grades">Show Grades <span
                                         class="ml-2"> <i
                                             class="fas fa-arrow-right animation"></i></span></button>
+                            <button class="btn-block btn-primary btn" id="btn-show-absences">Show Absences <span
+                                        class="ml-2"> <i
+                                            class="fas fa-arrow-right animation"></i></span></button>
                         </td>
                     </tr>
                     <table cellspacing="0" class="table-grades d-none">
+                        <div class="header d-none" id="grades-header">Grades</div>
                         <tr>
                             <th>Course*</th>
                             <th>Grade*</th>
@@ -59,6 +64,37 @@
                             <td class="text-center">
                                 <a href="{{ path('teacher_add_grades', {'student_id': student.id}) }}" class="btn-primary btn"
                                 id="grade-add">Add New</a>
+                            </td>
+                        </tr>
+                    </table>
+                    <table cellspacing="0" class="table-absences d-none">
+                        <div class="header d-none" id="absences-header">Absences</div>
+                        <tr>
+                            <th>Course*</th>
+                            <th>Date*</th>
+                            <th>Notes</th>
+                            <th>Excused</th>
+                            <th>Actions</th>
+                        </tr>
+                        {% for absence in absences %}
+                            <tr>
+                                <td>{{ absence.course }}</td>
+                                <td>{{ absence.date|date("d/m/Y") }}</td>
+                                <td>{{ absence.notes }}</td>
+                                <td>{{ absence.excused ? 'Yes' : 'No'}}</td>
+                                <td>
+                                    {% if not absence.excused %}<a href="{{ path('teacher_student_absence_excuse', {'absence_id': absence.id}) }}" class="btn-success btn btn-excuse-absence" id="{{ absence.id }}">Excuse</a>{% endif %}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td class="text-center">
+                                <a href="{{ path('teacher_student_absence_add', {'student_id': student.id}) }}" class="btn-primary btn"
+                                   id="absence-add-new">Add New</a>
                             </td>
                         </tr>
                     </table>
