--- a/app/Resources/views/common/footer.html.twig
+++ b/app/Resources/views/common/footer.html.twig
@@ -1,5 +1,13 @@
 {% block footer %}
-    <div id="footer">
-        <h2>Alex</h2>
+    <div id="footer" class="mt-5">
+        <div class="container mt-5">
+            <div class="row mt-5 mb-3">
+                <div class="col-6 offset-6 align-self-center text-right">
+                    <a class="git-hub-link" href="https://github.com/AlexxIV/softuni-symfony-project">
+                        <img src="{{ asset('build/images/github-icon.png') }}" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
