--- a/app/Resources/views/common/index.html.twig
+++ b/app/Resources/views/common/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block main %}
     <h2>LOGGED</h2>
-    {{ dump(app.user) }}
-    {{ dump(app.request) }}
-    {{ dump(app.session) }}
-    {{ dump(app.environment) }}
+    {#{{ dump(app.user) }}#}
+    {#{{ dump(app.request) }}#}
+    {#{{ dump(app.session) }}#}
+    {#{{ dump(app.environment) }}#}
 {% endblock %}
